--- a/News.ipynb
+++ b/News.ipynb
@@ -2215,7 +2215,6 @@
       "source": [
         "from keras.layers import Dropout\n",
         "from keras import layers\n",
-        "from keras.layers import Bidirectional\n",
         "model = Sequential()\n",
         "e = Embedding(vocab_size, 100,input_length=105,trainable=True)\n",
         "model.add(e)\n",
@@ -2291,7 +2290,7 @@
       "source": [
         "Next, I wanted to venture into RNNs since they are pretty slick with sequential data. but they usually need a lot of data.\n",
         "\n",
-        "I added a few LSTM layers and i was able to get more that 99% accuracy on validation in just 8 epochs.\n",
+        "I added a few LSTM layers and i was able to get around 99% accuracy on validation in just 8 epochs.\n",
         "\n",
         "LSTM(Long Short term Memory): I am not going to try and explain it here but basically it is a pretty cool algorithm that uses memory cells to store longer sequences of data(This is a highly simplified description)"
       ]
