--- a/News.ipynb
+++ b/News.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/anmitra/Text-Classification/blob/master/News.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/anmitra/Text-Classification-using-Word-Embeddings/blob/master/News.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -2304,7 +2304,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 686
         },
-        "outputId": "58fc0cbe-9717-4b20-8e61-7393fdc1e97c"
+        "outputId": "7834b76d-ee4b-43c1-ce84-4ed00926b214"
       },
       "source": [
         "from keras.layers import LSTM\n",
@@ -2334,26 +2334,26 @@
         "#loss, accuracy = model.evaluate(padded_docs, label_encode, verbose=0)\n",
         "#print('Accuracy: %f' % (accuracy*100))"
       ],
-      "execution_count": 225,
+      "execution_count": 228,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_35\"\n",
+            "Model: \"sequential_36\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "embedding_35 (Embedding)     (None, 105, 100)          3971200   \n",
+            "embedding_36 (Embedding)     (None, 105, 100)          3971200   \n",
             "_________________________________________________________________\n",
-            "bidirectional_9 (Bidirection (None, 105, 128)          84480     \n",
+            "bidirectional_11 (Bidirectio (None, 105, 128)          84480     \n",
             "_________________________________________________________________\n",
-            "dropout_29 (Dropout)         (None, 105, 128)          0         \n",
+            "dropout_31 (Dropout)         (None, 105, 128)          0         \n",
             "_________________________________________________________________\n",
-            "bidirectional_10 (Bidirectio (None, 64)                41216     \n",
+            "bidirectional_12 (Bidirectio (None, 64)                41216     \n",
             "_________________________________________________________________\n",
-            "dropout_30 (Dropout)         (None, 64)                0         \n",
+            "dropout_32 (Dropout)         (None, 64)                0         \n",
             "_________________________________________________________________\n",
-            "dense_48 (Dense)             (None, 4)                 260       \n",
+            "dense_49 (Dense)             (None, 4)                 260       \n",
             "=================================================================\n",
             "Total params: 4,097,156\n",
             "Trainable params: 4,097,156\n",
@@ -2362,21 +2362,21 @@
             "None\n",
             "Train on 12204 samples, validate on 3052 samples\n",
             "Epoch 1/8\n",
-            "12204/12204 [==============================] - 161s 13ms/step - loss: 0.3883 - acc: 0.8569 - val_loss: 0.1244 - val_acc: 0.9695\n",
+            "12204/12204 [==============================] - 160s 13ms/step - loss: 0.3780 - acc: 0.8649 - val_loss: 0.1037 - val_acc: 0.9748\n",
             "Epoch 2/8\n",
-            "12204/12204 [==============================] - 158s 13ms/step - loss: 0.0691 - acc: 0.9848 - val_loss: 0.0760 - val_acc: 0.9813\n",
+            "12204/12204 [==============================] - 155s 13ms/step - loss: 0.0528 - acc: 0.9880 - val_loss: 0.0574 - val_acc: 0.9872\n",
             "Epoch 3/8\n",
-            "12204/12204 [==============================] - 155s 13ms/step - loss: 0.0368 - acc: 0.9910 - val_loss: 0.0585 - val_acc: 0.9856\n",
+            "12204/12204 [==============================] - 149s 12ms/step - loss: 0.0233 - acc: 0.9938 - val_loss: 0.0414 - val_acc: 0.9882\n",
             "Epoch 4/8\n",
-            "12204/12204 [==============================] - 165s 14ms/step - loss: 0.0158 - acc: 0.9958 - val_loss: 0.0492 - val_acc: 0.9889\n",
+            "12204/12204 [==============================] - 150s 12ms/step - loss: 0.0140 - acc: 0.9954 - val_loss: 0.0462 - val_acc: 0.9875\n",
             "Epoch 5/8\n",
-            "12204/12204 [==============================] - 157s 13ms/step - loss: 0.0107 - acc: 0.9964 - val_loss: 0.0504 - val_acc: 0.9869\n",
+            "12204/12204 [==============================] - 152s 12ms/step - loss: 0.0089 - acc: 0.9971 - val_loss: 0.0347 - val_acc: 0.9921\n",
             "Epoch 6/8\n",
-            "12204/12204 [==============================] - 153s 13ms/step - loss: 0.0062 - acc: 0.9976 - val_loss: 0.0555 - val_acc: 0.9875\n",
+            "12204/12204 [==============================] - 151s 12ms/step - loss: 0.0073 - acc: 0.9971 - val_loss: 0.0454 - val_acc: 0.9892\n",
             "Epoch 7/8\n",
-            "12204/12204 [==============================] - 154s 13ms/step - loss: 0.0063 - acc: 0.9971 - val_loss: 0.0528 - val_acc: 0.9889\n",
+            "12204/12204 [==============================] - 149s 12ms/step - loss: 0.0082 - acc: 0.9971 - val_loss: 0.0430 - val_acc: 0.9898\n",
             "Epoch 8/8\n",
-            "12204/12204 [==============================] - 156s 13ms/step - loss: 0.0055 - acc: 0.9976 - val_loss: 0.0567 - val_acc: 0.9898\n"
+            "12204/12204 [==============================] - 149s 12ms/step - loss: 0.0055 - acc: 0.9968 - val_loss: 0.0456 - val_acc: 0.9905\n"
           ],
           "name": "stdout"
         }
